<?xml version="1.0" encoding="utf-8"?><!--
  ~  license-start
  ~  eu-digital-green-certificates / dgca-verifier-app-android
  ~
  ~  Copyright (C) 2021 T-Systems International GmbH and all other contributors
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~  license-end
  ~
  ~  Created by osarapulov on 9/3/21 6:06 PM
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/white">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:theme="@style/DgcaVerifierAppAndroid.Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="@string/debug_mode"
        app:titleTextColor="@color/white" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/debugModeSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:paddingHorizontal="@dimen/default_margin"
        android:text="@string/debug_mode"
        android:textColor="@color/grey_50"
        android:textSize="@dimen/text_size_medium"
        android:theme="@style/TextAppearance.Dgca.Switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:checked="true" />

    <RadioGroup
        android:id="@+id/debugModeLevel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/debugModeSwitch">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/level1"
            style="@style/TextAppearance.Dgca.DebugModeRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/level_1_normal_capture" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/level2"
            style="@style/TextAppearance.Dgca.DebugModeRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level_2_traceable_capture" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/level3"
            style="@style/TextAppearance.Dgca.DebugModeRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level_3_full_take" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/default_margin"
        android:scaleType="centerInside"
        android:src="@drawable/eu_logo_big"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>